--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,7 +8,7 @@ const links = [
 ];
 ---
 
-<nav class="container py-3 px-3">
+<nav class="container py-3 px-3 md:flex md:justify-between md:items-center">
   <div class="flex justify-between items-center">
     <h1>
       Beautiful <span>Disaster Art</span>
@@ -23,7 +23,7 @@ const links = [
     {
       links.map((link) => {
         return (
-          <li class="text-3xl font-thin">
+          <li class="text-3xl font-thin md:text-xl">
             <a href={link.href}>{link.label}</a>
           </li>
         );
@@ -43,7 +43,7 @@ const links = [
 
   menuButton.addEventListener("click", toggleMenu);
 </script>
-<style>
+<style is:global>
   .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -87,7 +87,7 @@ const links = [
     }
 
     li {
-      color: var(--primary-2);
+      color: var(--accent-4);
     }
 
     .mobile-menu {
