--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -84,8 +84,8 @@ const { title } = Astro.props;
 
   a:hover {
     text-decoration: underline;
+    text-decoration-color: var(--primary-2);
   }
-
   /* Style lists */
   ul,
   ol {
