--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,6 +41,7 @@ const { title } = Astro.props;
     --primary: rgba(2, 187, 182, 1);
     --primary-2: rgba(67, 203, 199, 1);
     --primary-3: rgba(194, 238, 237, 1);
+    --primary-3-alpha: rgba(194, 238, 237, 0.8);
     --inconsolata: "Inconsolata", monospace;
     --athiti: "Athiti", sans-serif;
 
@@ -63,7 +64,7 @@ const { title } = Astro.props;
 
   /* Set default font */
   html {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    font-family: Oxygen, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
       "Segoe UI Symbol";
     font-size: 16px;
