add responsive style to large display & style contact page & add image fade interval for home page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,9 +8,7 @@ let sticky = false;
 ---
 
 <footer
-  class={`${
-    sticky ? "fixed" : ""
-  } flex w-full p-3 bottom-0 justify-center gap-x-6 items-center`}
+  class={`relative bottom-0 flex w-full p-3 justify-center gap-x-6 items-center`}
 >
   <a href="https://instagram.com">
     <svg
