--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -4,7 +4,7 @@ import ImgList from "../components/ImgList.jsx";
 ---
 
 <Layout title="gallery">
-  <main class="py-2">
+  <main class="md:pt-8 py-2">
     <section id="img-list" class={`w-full px-2`}>
       <ImgList amount={4} radius={true} client:load />
     </section>
