--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,17 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import ImgList from "../components/ImgList.jsx";
+// import ImgList from "../components/ImgList.jsx";
+import ImageFade from "../components/imgFade/ImageFade.tsx";
 ---
 
 <Layout title="Beautiful Disaster Art">
-  <main class="pt-2 px-2">
-    <section class="py-2">
-      <p>
+  <main class="md:pt-8 md:flex flex-col relative md:justify-center">
+    <div class="md:flex w-full justify-center">
+      <ImageFade client:only />
+    </div>
+
+    <div class="md:flex md:w-full justify-center">
+      <p class="p-3 text-center md:tracking-widest lg:text-lg md:max-w-[50vw]">
         Welcome to <span>Beautiful Disaster</span> Art, where my art is <span
           >home</span
         >. I pour my <span>heart</span>
@@ -17,11 +22,7 @@ import ImgList from "../components/ImgList.jsx";
           >supporting</span
         > me.
       </p>
-    </section>
-
-    <section id="img-list" class={`w-full ml-[-5%] pt-8`}>
-      <ImgList amount={1} radius={false} client:idle />
-    </section>
+    </div>
   </main>
 </Layout>
 
@@ -44,11 +45,14 @@ import ImgList from "../components/ImgList.jsx";
     font-size: var(--hero);
     font-style: normal;
     font-weight: 400;
-    line-height: 29px;
-    text-align: center;
-    letter-spacing: 0.15em;
   }
-
+  img {
+    display: none;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    display: block;
+    cursor: pointer;
+  }
   p > span {
     color: var(--primary-2);
   }
