--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -6,7 +6,7 @@ import EventCard from "../components/EventCard";
 <Layout title="events">
   <main>
     <section class="flex flex-col justify-center items-center">
-      <h1>events</h1>
+      <!-- <h1>events</h1> -->
       <EventCard />
     </section>
   </main>
