--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,20 +2,13 @@
 const path = Astro.url.pathname;
 
 let sticky = false;
-// if (path === "/") {
-//   sticky = true;
-// }
 ---
 
 <footer
   class={`relative bottom-0 flex w-full p-3 justify-center gap-x-6 items-center`}
 >
   <a href="https://instagram.com">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="1em"
-      height="1em"
-      viewBox="0 0 24 24"
+    <svg width="1em" height="1em" viewBox="0 0 24 24"
       ><g fill="none"
         ><path
           stroke-linecap="round"
@@ -29,20 +22,24 @@ let sticky = false;
       ></svg
     >
   </a>
-
   <a href="https://twitter.com">
     <svg
-      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1668.56 1221.19"
+      id="twitter"
       width="1em"
       height="1em"
       viewBox="0 0 24 24"
-      ><path
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M23 3.01s-2.018 1.192-3.14 1.53a4.48 4.48 0 0 0-7.86 3v1a10.66 10.66 0 0 1-9-4.53s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5c0-.278-.028-.556-.08-.83C21.94 5.674 23 3.01 23 3.01Z"
-      ></path></svg
     >
+      <g transform="translate(52.390088,-25.058597)">
+        <path
+          class="hover:fill-[var(--primary-3)]"
+          fill="#898996FF"
+          id="path1009"
+          d="M283.94,167.31l386.39,516.64L281.5,1104h87.51l340.42-367.76L984.48,1104h297.8L874.15,558.3l361.92-390.99
+      h-87.51l-313.51,338.7l-253.31-338.7H283.94z M412.63,231.77h136.81l604.13,807.76h-136.81L412.63,231.77z"
+        ></path>
+      </g>
+    </svg>
   </a>
 
   <a href="https://tiktok.com">
@@ -62,6 +59,14 @@ let sticky = false;
 
 <style>
   a > svg {
+    width: 3.5rem;
+    height: 3.5rem;
+    stroke: var(--accent-4);
+    stroke-width: 0.05rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  #twitter {
     width: 3.5rem;
     height: 3.5rem;
     stroke: var(--accent-4);
