--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Nav from "../components/Nav.astro";
+import Nav from "../components/Nav.svelte";
 import Footer from "../components/Footer.astro";
 export interface Props {
   title: string;
@@ -24,7 +24,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="container mx-auto px-3 flex flex-col min-h-screen gap-3">
-    <Nav />
+    <Nav client:load />
     <slot />
     <Footer />
   </body>
