--- a/src/pages/art/[slug].astro
+++ b/src/pages/art/[slug].astro
@@ -32,7 +32,7 @@ if (entry === undefined) {
 ---
 
 <Layout title={entry.data.title}>
-  <main class="flex flex-col gap-y-3">
+  <main class="flex flex-col gap-y-3" transition:animate="fade">
     <img
       src={entry.data.src}
       alt={entry.data.title}
