--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Nav from "../components/Nav.svelte";
 import Footer from "../components/Footer.astro";
+import { ViewTransitions } from "astro:transitions";
 export interface Props {
   title: string;
 }
@@ -8,7 +9,7 @@ export interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -27,6 +28,7 @@ const { title } = Astro.props;
     <Nav client:load />
     <slot />
     <Footer />
+    <ViewTransitions />
   </body>
 
   <style is:global>
@@ -63,8 +65,16 @@ const { title } = Astro.props;
 
     /* Set default font */
     html {
-      font-family: Oxygen, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      font-family:
+        Oxygen,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Helvetica,
+        Arial,
+        sans-serif,
+        "Apple Color Emoji",
+        "Segoe UI Emoji",
         "Segoe UI Symbol";
       font-size: 16px;
       line-height: 1.5;
