--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -43,8 +43,11 @@ if (Astro.request.method === "POST") {
 ---
 
 <Layout title="contact">
-  <main class="flex flex-col items-center justify-center min-h-[70vh]">
-    <h1>contact</h1>
+  <main
+    class="flex flex-col items-center justify-center min-h-[70vh]"
+    transition:animate="fade"
+  >
+    <h1>contact me</h1>
     <div class="py-4 px-6 sm:px-1 rounded-sm w-full md:w-[60vw] lg:w-[40vw]">
       <form
         method="post"
